gke-ai-demo/networkpolicy-gradio-to-vllm.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gradio-to-vllm
  namespace: app-chat
spec:
  podSelector:
    matchLabels:
      app: gradio
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: shared-models
      podSelector:
        matchLabels:
          component: inference-server
  - ipBlock:
      cidr: 169.254.169.252/32
    ports:
      - port: 988
        protocol: TCP
      - port: 80
        protocol: TCP
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
